Changes since version 1.4.0
---------------------------

- Changed the mapping for tie classes, which now implement the
  interface Ice.TieBase. This interface defines the ice_delegate
  methods and changes the delegate type from _FooOperations to
  java.lang.Object.

- Changed the --depend option of slice2java. If you get dependencies
  for a file x.ice that includes y.ice, the dependency line that is
  written now is "x.ice: y.ice". (Previously, it was
  "x.cpp: x.ice y.ice".) If a Slice file does not include any other
  Slice file, no dependency is printed. With some post-processing,
  this is sufficient to generate dependencies for tools such as ant
  and make.

Changes since version 1.3.0
---------------------------

- Fixed a bug when making asynchronous invocations on a routed proxy.

- Changed the way sequences are unmarshaled to protect against
  malicous messages with faked very large sequence count values.
  While even with previous versions of Ice, buffer overruns were
  impossible, malicious messages could cause large amounts of memory
  to be preallocated, causing the receiving process to run out of
  memory. This is no longer possible -- the total amount of memory
  preallocated for sequences during unmarshaling is now capped at
  Ice.MessageSizeMax.

- Removed a bogus assert that could happen under certain race
  conditions when a connection timeout occurs.

- Added checkedCast and uncheckedCast operations to ObjectPrxHelper.

- Assertions in servant methods are now correctly caught and an error
  message is printed using the logger.

- Facets have been significantly redesigned.

  * Facets are no longer hierarchical. As a result, FacetPath (which
    was a sequence of strings) is now simply a string. This is
    reflected in all APIs that used FacetPath.

  * There is no longer an active facet map in Ice::Object. As a
    result, the following operations have been removed:

    + On proxies: ice_facets, ice_appendFacet.
